syntax = "proto3";

package com.example;
option go_package = ".;proto";
option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "Demo";

service Greeter {
    // Hello 服务，通过 request 返回 hello reply 信息
    rpc SayHello (HelloRequest) returns (HelloReply);
    // 实现加法运算
    rpc Add(AddRequest) returns (AddReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddReply {
    int32 result = 1;
}